WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314260
[JSC] IPInt slow path for `memory.atomic.notify` truncates the Memory64 pointer and offset to 32 bits
https://bugs.webkit.org/show_bug.cgi?id=314260
Summary
[JSC] IPInt slow path for `memory.atomic.notify` truncates the Memory64 point...
Sosuke Suzuki
Reported
2026-05-06 16:52:12 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Sosuke Suzuki
Comment 1
2026-05-06 16:54:17 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64419
EWS
Comment 2
2026-05-07 15:24:47 PDT
Committed
312831@main
(afc44e359ac3): <
https://commits.webkit.org/312831@main
> Reviewed commits have been landed. Closing PR #64419 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-05-07 15:25:13 PDT
<
rdar://problem/176500772
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug